Ajout astar pour trouver son chemin

--- a/index.html
+++ b/index.html
@@ -305,13 +305,34 @@
     </TABLE>
 </FORM>
 
-<TABLE style="margin:0 auto;">
+<TABLE style="display:inline-block; margin: 0 1em;">
+	<tr>
+		<th colspan="99">Dijkstra</th>
+	</tr>
     <SCRIPT TYPE="text/javascript">
         var str_img;
         for (j = hauteur_terrain; j >= 1; j--) {
             document.write("<TR>\n");
             for (i = 1; i <= largeur_terrain; i++) {
                 document.write('<TD ID="pcc_' + j + '_' + i + '" STYLE="background-image:url(\'img/fond.gif\');width:15px;height:15px;">');
+                document.write('&nbsp;');
+                document.write('</TD>\n');
+            }
+            document.write("</TR>");
+        }
+    </SCRIPT>
+</TABLE>
+
+<TABLE style="display:inline-block; margin: 0 1em;">
+    <tr>
+		<th colspan="99">A-Star</th>
+	</tr>
+	<SCRIPT TYPE="text/javascript">
+        var str_img;
+        for (j = hauteur_terrain - 1; j >= 0; j--) {
+            document.write("<TR>\n");
+            for (i = 0; i < largeur_terrain; i++) {
+                document.write('<TD ID="astar_' + j + '_' + i + '" STYLE="background-image:url(\'img/fond.gif\');width:15px;height:15px;">');
                 document.write('&nbsp;');
                 document.write('</TD>\n');
             }
@@ -509,4 +530,5 @@
     }
 
 </SCRIPT>
+<script type="text/javascript" src="astar.js"></script>
 <script type="text/javascript" src="robot.js"></script>
