Extracted queue.js plus small changes

--- a/index.html
+++ b/index.html
@@ -511,4 +511,5 @@
 
 </SCRIPT>
 <script type="text/javascript" src="astar.js"></script>
+<script type="text/javascript" src="queue.js"></script>
 <script type="text/javascript" src="robot.js"></script>
