Map #11 + activate no 9

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="terrain_1.js"></script>
+<script type="text/javascript" src="maps/eval_9.js"></script>
 
 <script type="text/javascript">
 
